--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "packageManager": "pnpm@10.4.1",
   "scripts": {
-    "dev": "dotenv -c -- next dev --turbopack",
+    "dev": "dotenv -c -- next dev --turbopack --hostname 0.0.0.0",
     "start": "dotenv -c -- next start",
     "build": "next build",
     "format": "prettier --check .",
@@ -31,12 +31,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.468.0",
     "next": "15.0.5",
     "next-themes": "^0.4.4",
     "radix-ui": "^1.4.3",
     "react": "^18.3.1",
     "react-aria-components": "^1.12.2",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.3",
     "sonner": "^1.7.4",
@@ -45,12 +47,12 @@
     "tailwindcss-animate": "^1.0.7",
     "vitest": "^2.1.9",
     "zod": "^3.24.2",
-    "zustand": "^5.0.3",
-    "gsap": "^3.13.0"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@gsap/react": "^2.1.2",
     "@types/canvas-confetti": "^1.9.0",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.8",
@@ -59,7 +61,6 @@
     "@types/react-dom": "^19.0.4",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
-    "@gsap/react": "^2.1.2",
     "dotenv-cli": "^10.0.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.0.5",
