--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Dietitian",
-  "short_name": "Dietitian",
+  "name": "Casamento Estêvão e Amanda Laura",
+  "short_name": "Estêvão e Amanda Laura",
   "icons": [
     {
       "src": "/web-app-manifest-192x192.png",
@@ -15,7 +15,7 @@
       "purpose": "maskable"
     }
   ],
-  "theme_color": "#8005b6",
-  "background_color": "#8005b6",
+  "theme_color": "#FFF",
+  "background_color": "#FFF",
   "display": "standalone"
 }
