style: mudando cor de fundo para ser a cor primária

--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -15,7 +15,7 @@
       "purpose": "maskable"
     }
   ],
-  "theme_color": "#FFF",
-  "background_color": "#FFF",
+  "theme_color": "#FFF2CA",
+  "background_color": "#FFF2CA",
   "display": "standalone"
 }
